Update Diemme
+ update pom 
+ fix pom
+ fix configuration to start app