@@ -2,11 +2,12 @@
 Progetto prototipo utilizzato a titolo esimplificativo
 
 Require:
-1. Java 8
+1. Java 17 
 2. Mongo DB
 3. Mysql
+4. MailTrap account
 
-## How install Mongo DB 
+## Come installare Mongo DB 
 
 ### Windows 
 Download da questo link 
@@ -19,5 +20,15 @@ https://www.mongodb.com/docs/manual/tutorial/install-mongodb-on-ubuntu/
 ### Macos
 
 https://www.mongodb.com/docs/manual/tutorial/install-mongodb-on-os-x/
+
+## Settaggi
+Settaggi per la configurazione dell'avvio dell'applicativo da IntelliJ
+Add VM option
+--add-opens java.base/java.lang=ALL-UNNAMED
+![Screenshot 2023-07-17 alle 20.06.05.png](..%2F..%2F..%2F..%2F..%2F..%2Fvar%2Ffolders%2Fbl%2Fc45fyd3n15d7_xs9dg8q37g40000gn%2FT%2FTemporaryItems%2FNSIRD_screencaptureui_jqSLqD%2FScreenshot%202023-07-17%20alle%2020.06.05.png)
+
+con il seguente risultato 
+
+![Screenshot 2023-07-17 alle 20.05.11.png](..%2F..%2F..%2F..%2F..%2F..%2Fvar%2Ffolders%2Fbl%2Fc45fyd3n15d7_xs9dg8q37g40000gn%2FT%2FTemporaryItems%2FNSIRD_screencaptureui_1FMQpP%2FScreenshot%202023-07-17%20alle%2020.05.11.png)
 
 
